--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,16 +1,114 @@
 :root {
-   font-size: 30px;
-}
-
-
-* {
-   box-sizing: border-box;
-   padding: 0;
-   margin: 0;
+   color: grey;
+   font-size: 16px;
+   font-family: Arial, Helvetica, sans-serif;
 }
 
 a {
-   color: inherit;
+   color: green;
+
    text-decoration: none;
 }
 
+.section-wrapper {
+   background-color: #63738a;
+   width: 500px;
+   height: 520px;
+   padding: 50px 50px;
+   margin: auto;
+}
+.section {
+   background-color: #f2f3f7;
+   display: flex;
+   flex-direction: column;
+   margin: auto;
+   max-width: 380px;
+   max-height: 480px;
+   height: 100%;
+   width: 100%;
+
+   text-align: center;
+}
+
+h1 {
+   font-weight: 600;
+   position: relative;
+   margin: 20px 0 10px 0;
+}
+h1::before {
+   content: " ";
+   background-color: grey;
+   position: absolute;
+   width: 94px;
+   height: 2px;
+   top: 13px;
+   left: 32px;
+}
+h1::after {
+   content: " ";
+   background-color: grey;
+   position: absolute;
+   width: 94px;
+   height: 2px;
+   top: 13px;
+   right: 32px;
+}
+section > p {
+   font-size: 0.82rem;
+   margin: 10px auto;
+}
+form {
+   width: 90%;
+   margin: 10px auto;
+}
+form > input,
+form > input:last-child {
+   width: 90%;
+   display: block;
+   margin: 20px auto;
+   padding: 10px;
+}
+
+form label:first-child {
+   display: flex;
+   flex-direction: row;
+   justify-content: space-around;
+   margin: 0 auto;
+}
+
+form label:first-child > input {
+   width: 40%;
+   margin: 10px 0 3px 0;
+   padding: 10px;
+}
+
+::placeholder {
+   padding: 10px;
+}
+
+form > input:last-child {
+   color: white;
+   background-color: green;
+
+   font-size: 1.05rem;
+   font-weight: 900;
+}
+
+.checkbox-font {
+   display: block;
+   text-align: left;
+   font-size: 0.9rem;
+   margin-bottom: 30px;
+}
+
+.section-wrapper > p,
+.section-wrapper > p > a {
+   color: white;
+   text-align: center;
+   font-size: 0.9rem;
+   font-weight: 500;
+}
+
+.section-wrapper > p > a {
+   text-decoration: underline 1px white;
+}
